k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: focusarc
  namespace: focusarc
spec:
  selector: { app: focusarc }
  ports:
    - port: 80
      targetPort: 4000
