k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: focusarc
  namespace: focusarc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: focusarc-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - fa.188.245.207.173.nip.io
      secretName: focusarc-tls
  rules:
    - host: fa.188.245.207.173.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: focusarc
                port:
                  number: 80
